Update broken favicon / Form
- fixed path to favicon files
- Improved form sizing for submit modal
- push new logo

--- a/index.html
+++ b/index.html
@@ -38,44 +38,46 @@
         <script type="text/javascript" src="http://use.typekit.net/gdp5nft.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
         <link rel="manifest" href="favicon/manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
     </head>  
 <body>
 <header class="container intro">
   <section id="header" class="header no-user">
     <div class="header-container">
+    <!-- ".logo" -->
       <div class="logo">
-      <a href="/"><img id="logo" src="logo/dog-logo-light.png"></a>
-        <span class="site-title" style=""><a href="/">jobs.with.dogs</a></span></div><!-- ".logo" -->
+      <a href="/"><img id="logo" src="logo/logo-transparent.png"></a>
+        <span class="site-title" style="display: none;"><a href="/">jobs.with.dogs</a></span></div>
       <!-- Form -->
        <div class="column col-3 col-xs-12 post">
-            <a href="#example-modal-2" class="btn btn-primary right">Submit a Job</a>
+            <a href="#example-modal-2" class="btn btn-primary right">Submit a Listing</a>
             <div class="modal modal-sm" id="example-modal-2">
               <a href="#modals-sizes" class="modal-overlay" aria-label="Close"></a>
               <div class="modal-container" role="document">
                 <div class="modal-header">
                   <a href="#modals-sizes" class="btn btn-clear float-right" aria-label="Close"></a>
-                  <div class="modal-title h5">Submit a Job</div>
+                  <div class="modal-title h5" style="display: none;">Submit a Job</div>
                 </div>
                 <div class="modal-body">
                   <div class="content"> 
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQWpUwLjQKR4JxKwtFSj5FNVLaLjf3903IFpCMNRBbFOXe3w/viewform?embedded=true" width="100%" height="auto" min-height="60vh !important" max-height="90vh" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                    <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQWpUwLjQKR4JxKwtFSj5FNVLaLjf3903IFpCMNRBbFOXe3w/viewform?embedded=true" width="100%" height="auto" min-height="60vh !important" max-height="90vh" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe> -->
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQWpUwLjQKR4JxKwtFSj5FNVLaLjf3903IFpCMNRBbFOXe3w/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       
                     <!-- Form structure -->
 <!--                     <form sheetsu="https://sheetsu.com/a/f/0b671b8cfc55"> -->
@@ -119,7 +121,7 @@
 </header>
 
 <div class="intro-container hero col-md-12">
-    <div class="col-6 col-sm-10" id="intro"><h1 id="site-desc">Discover the best dog-friendly tech companies <!-- 🐶 --></h1></div>
+    <div class="col-7 col-sm-10" id="intro"><h1 id="site-desc" class="center">Discover the best dog-friendly tech companies <!-- 🐶 --></h1></div>
     <!-- <p>If you’re among the <a href="http://www.americanpetproducts.org/press_industrytrends.asp" target="_blank">68% of U.S. households</a> that include a pet, you likely know the joy of unconditional love. On the flipside, you know how miserable it can be to go to work each day and leave your best buddy behind.</p>  -->
     <!-- Dog image -->
 <!--    <div class="hero-container"><img id="img-hero" src=""> </div> -->
