Fix footer styles ✨

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </div><!-- /end content container -->
 
 <footer>
-  <div class="container pad-lg">
+  <div class="container">
     <p class="center copyright">Designed and built with <span class="text-error">♥</span> by <a href="http://www.ericpuigmarti.com/" target="_blank">Eric Puigmarti</a><br>Powered by <a href="https://sheetsu.com/" target="_blank">Sheetsu</a></p>
   </div>  
 </footer>
