--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
   </section>
 </header>
 
-<div class="intro-container hero col-md-12">
-    <div class="col-7 col-sm-11" id="intro"><h1 id="site-desc" class="center">Discover the best dog-friendly tech companies <!-- 🐶 --></h1></div>
+<div class="intro-container container grid-xl hero col-md-12">
+    <div class="col-5 col-sm-11" id="intro"><h1 id="site-desc" class="">Discover the world’s best dog-friendly companies</h1></div>
     <!-- <p>If you’re among the <a href="http://www.americanpetproducts.org/press_industrytrends.asp" target="_blank">68% of U.S. households</a> that include a pet, you likely know the joy of unconditional love. On the flipside, you know how miserable it can be to go to work each day and leave your best buddy behind.</p>  -->
     <!-- Dog image -->
-<!--    <div class="hero-container"><img id="img-hero" src=""> </div> -->
+   <div class="hero-container col-7 col-sm-12"><img id="img-hero" src="img/work-background.svg"> </div>
   </div>
 
 <!-- <input type="text" id="country" placeholder="Country" value="" onkeydown="myFunc()"> -->
