--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <!-- <option value="all">Locations</option> -->
     <option value="city" placeholder="Locations" >{{city_select}}</option>
   </select>
+  <button class="btn btn-primary right">Explore</button>
 <!--   <select class="col-3 form-select" name="industry" sheetsu="https://sheetsu.com/apis/v1.0/e3589d470ecc" sheetsu-limit="20" sheetsu-ignore-case="true">
     <option value="all">Locations</option>
     <option value="industry" placeholder="industry">{{industry}}</option>
